restart script could miss memory settings