@@ -22,6 +22,20 @@ if [ -z "${CELEBORN_HOME}" ]; then
   export CELEBORN_HOME="$(cd "`dirname "$0"`"/..; pwd)"
 fi
 
+if [ "$CELEBORN_WORKER_MEMORY" = "" ]; then
+  CELEBORN_WORKER_MEMORY="1g"
+fi
+
+if [ "$CELEBORN_WORKER_OFFHEAP_MEMORY" = "" ]; then
+  CELEBORN_WORKER_OFFHEAP_MEMORY="1g"
+fi
+
+export CELEBORN_JAVA_OPTS="-Xmx$CELEBORN_WORKER_MEMORY -XX:MaxDirectMemorySize=$CELEBORN_WORKER_OFFHEAP_MEMORY $CELEBORN_WORKER_JAVA_OPTS"
+JAVA_VERSION=$(java -version 2>&1 | grep " version " | head -1 | awk '{print $3}' | tr -d '"')
+if [[ ! "$JAVA_VERSION" == 1.8.* ]]; then
+  export CELEBORN_JAVA_OPTS="${CELEBORN_JAVA_OPTS} --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --illegal-access=warn -Dio.netty.tryReflectionSetAccessible=true"
+fi
+
 if [ "$WORKER_INSTANCE" = "" ]; then
   WORKER_INSTANCE=1
 fi
